# fantasy.rs

./: .gitjournal.toml  Cargo.toml  README.md  Settings.toml  game_state.dot
crates/app-dir/: Cargo.toml
crates/app-dir/src/: lib.rs
crates/bpm/: Cargo.toml
crates/bpm/benches/: turn_benchmark.rs
crates/bpm/src/: lib.rs  rules.rs
crates/client/: Cargo.toml
crates/client/src/: cli.yml  lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine-io/: Cargo.toml
crates/engine-io/src/: codec.rs  lib.rs  pipe.rs
crates/engine/src/: integration.rs  lib.rs
crates/engine/tests/: test.rs
crates/fconfig/: Cargo.toml
crates/fconfig/src/: lib.rs
docker/alpine_edge/: Dockerfile
docs/: book.toml
docs/src/: SUMMARY.md  Setup.md  chapter_1.md  chapter_2.md  chapter_3.md  conclusion.md  flame-graph.html
snap/: snapcraft.yaml
src/: main.rs
tests/: players1.txt
