[package]
authors = ["mmacedoeu <contato@mmacedo.eu.org>"]
name = "core"
version = "0.1.0"
[dependencies]
actix = "0.7.4"
failure = "0.1.2"
serde = "^1.0.78"
serde_derive = "^1.0.78"

[dependencies.flame]
optional = true
version = "0.2.2"

[dependencies.flamer]
optional = true
git = "https://github.com/llogiq/flamer"

[features]
default = []
flame_it = ["flame", "flamer"]
